# NerVEOUSai

./: .gitignore  README.md  vercel.json
backend/: main.py  pyproject.toml  requirements.txt
backend/api/: advice.py  districts.py  predict.py
backend/data/: bangladesh_climate_ai_1000.csv  generate_dataset.py
backend/models/: disease_model.pkl  flood_model.pkl  migration_model.pkl
backend/train/: train_all_models.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ControlPanel.jsx  GolemChat.jsx  RiskMap.jsx  StatsRow.jsx  Tutorial.jsx
frontend/src/data/: bd-districts.geo.json  districts.json
frontend/src/hooks/: useIntroOnce.js
frontend/src/pages/: Home.jsx
frontend/src/utils/: riskStyle.js  sound.js
